Fix color contrast for inserted diffs

--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -96,5 +96,5 @@ pre[class*="language-"] {
 }
 
 .token.inserted {
-	color: green;
+	color: #7ec699;
 }
